--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@tailwindcss/typography": "^0.5.9",
     "autoprefixer": "^10.4.13",
     "contentlayer": "0.3.4",
-    "esbuild": "0.18.11",
     "github-slugger": "^1.4.0",
     "gray-matter": "^4.0.2",
     "image-size": "1.0.0",
@@ -41,12 +40,14 @@
     "unist-util-visit": "^4.1.0"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.4.10",
     "@svgr/webpack": "^8.0.1",
     "@types/mdx": "^2.0.5",
     "@types/react": "^18.2.14",
     "@typescript-eslint/eslint-plugin": "^6.1.0",
     "@typescript-eslint/parser": "^6.1.0",
     "cross-env": "^7.0.3",
+    "esbuild": "0.19.5",
     "eslint": "^8.45.0",
     "eslint-config-next": "13.5.6",
     "eslint-config-prettier": "^8.8.0",
@@ -73,6 +74,5 @@
     "*.+(js|jsx|ts|tsx|json|css|md|mdx)": [
       "prettier --write"
     ]
-  },
-  "packageManager": "yarn@3.6.1"
+  }
 }
